# flipanimgen

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
flipanimgen/: __init__.py  __main__.py  cli.py  dithering.py  main.py  metadata.py  ofw.py
