[tool.poetry]
name = "flipanimgen"
description = "Dithering animation generator from video files for Flipper Zero written in Python"
version = "1.0.0"
authors = ["D4n13l3k00 <D4n13l3k00@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
flipanimgen = "flipanimgen.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
numba = "^0.60.0"
opencv-python = "^4.10.0.84"
numpy = "^2.0.1"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.5.6"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
